# mira

./: '  .gitignore  Cargo.toml  LICENSE  README.md  \  ]  abi.md  cargo.sh  config.example.sh  doc.sh  index.css  index.html  index.js  langref.md  main  main.lang  main.mr  meow  meow.mr  miradoc_output.ts  out  out.ll  out.meow  panic_example.mr  release.sh  searchidx.js  std.lang  std.mr  std_test.mr  syntax.md  tasks.md  test  test.lang  test.ll  todo.md
.github/workflows/: deploy_miradoc.yml  release.yml  static.yml
lib/mirastd/: alloc.mr  allocate.mr  clone_copy.mr  intrinsics.mr  langitems.mr  lib.mr  os.mr  panic.mr  panicking.mr  prelude.mr  ptr.mr  slice.mr  start.mr  vec.mr
mira/: Cargo.toml
mira-argparse/: Cargo.toml
mira-argparse/src/: lib.rs
mira-common/: Cargo.toml
mira-common/src/: index.rs  lib.rs  store.rs  threadpool.rs
mira-context/: Cargo.toml
mira-context/src/: diagnostics_emitter.rs  lib.rs
mira-doc/: Cargo.toml
mira-doc/mock/: index.css  index.html  index.js  noscript.css
mira-doc/src/: default_ty_links.rs  html.rs  main.rs  markdown.rs
mira-driver/: Cargo.toml
mira-driver/src/: lib.rs  libtree.rs  parsing.rs
mira-error-codes/: Cargo.toml
mira-error-codes/src/: lib.rs
mira-errors/: Cargo.toml
mira-errors/src/: diagnostics.rs  lib.rs  printers.rs  test_errors.rs
mira-expand/: Cargo.toml
mira-lexer/: Cargo.toml
mira-lexer/src/: builtin_macros.rs  error.rs  lexing_context.rs  lib.rs  quote.rs  token.rs
mira-linking/: Cargo.toml
mira-linking/src/: lib.rs
mira-llvm-backend/: Cargo.toml
mira-llvm-backend/src/: abi.rs  context.rs  debug_builder.rs  error.rs  intrinsics.rs  lib.rs  mangling.rs
mira-llvm-backend/src/builder/: asm.rs  binop.rs  call.rs  cast.rs  comparison.rs  control_flow.rs  expr.rs  intrinsic.rs  lit.rs  mod.rs  ptr.rs  scope.rs
mira-macros/: Cargo.toml
mira-macros/src/: display.rs  error_data.rs  lib.rs  queries.rs  utils.rs
mira-parser/: Cargo.toml
mira-parser/src/: annotations.rs  error.rs  expression.rs  lib.rs  old_expression.rs  path.rs  statement.rs  tokenstream.rs  types.rs
mira-parser/src/expand/: builtin_macros.rs  macro_expander.rs  mod.rs  pat_parser.rs
mira-parser/src/module/: mod.rs  module_resolution.rs
mira-parser/src/statements/: annotation.rs  control_flow.rs  defer.rs  display.rs  let_stmt.rs  mod.rs  struct_def.rs  trait_def.rs
mira-parser/src/std_annotations/: alias.rs  callconv.rs  doc.rs  ext_vararg.rs  function_attr.rs  intrinsic.rs  lang_item.rs  llvm_intrinsic.rs  mod.rs  noinline.rs  section.rs
mira-progress-bar/: Cargo.toml
mira-progress-bar/src/: lib.rs  print_thread.rs  progress_bar.rs  sized_line_writer.rs
mira-spans/: Cargo.toml
mira-spans/src/: arena.rs  context.rs  interner.rs  lib.rs  span.rs  symbol.rs  type_arena.rs
mira-target/: Cargo.toml
mira-target/src/: lib.rs
mira-typeck/: Cargo.toml
mira-typeck/src/: context.rs  error.rs  expression.rs  intrinsics.rs  lang_items.rs  lib.rs  type_resolution.rs  typechecking.rs  types.rs
mira-typeck/src/ir/: expressions.rs  literal.rs  mod.rs  visit.rs
mira-typeck/src/ir/passes/: mod.rs  typename_intrinsic.rs
mira-typeck/src/ir_displayer/: expressions.rs  formatter.rs  function.rs  mod.rs  module.rs  statics.rs  structs.rs  tc_context.rs  traits.rs  typed_literal.rs
mira-typeck/src/monomorphisation/: mod.rs
mira-typeck/src/optimizations/: dead_code_elimination.rs
mira-typeck/src/queries/: mod.rs
mira-typeck/src/queries/plumbing/: cache.rs  key.rs  mod.rs
mira/src/: annotations.rs  arena.rs  builtin_macros.rs  context.rs  error.rs  globals.rs  interner.rs  lang_items.rs  lib.rs  linking.rs  module.rs  parser.rs  slab.rs  store.rs  string_interner.rs  target.rs  threadpool.rs  tokenizer.rs  tokenstream.rs  typ_macros.rs
mira/src/codegen/: context.rs  debug_builder.rs  debug_constants.rs  error.rs  intrinsics.rs  mangling.rs  mod.rs
mira/src/linking/: parsing.rs
mira/src/module/: mod.rs  module_resolution.rs
mira/src/optimizations/: dead_code_elimination.rs
mira/src/parser/: expression.rs  mod.rs  module_resolution.rs  statement.rs  types.rs
mira/src/parser/expand/: builtin_macros.rs  macro_expander.rs  mod.rs  pat_parser.rs
mira/src/progress_bar/: box_drawing_characters.rs  mod.rs  progress_bar.rs  sized_line_writer.rs
mira/src/std_annotations/: alias.rs  alias_annotation.rs  callconv.rs  ext_var_arg.rs  ext_vararg.rs  function_attr.rs  mod.rs  noinline.rs  section.rs
mira/src/tokenizer/: span.rs
mira/src/typechecking/: error.rs  expression.rs  intrinsics.rs  ir_displayer.rs  mod.rs  type_resolution.rs  typechecking.rs  types.rs
mira/src/typechecking/ir_displayer/: expressions.rs  formatter.rs  function.rs  mod.rs  module.rs  statics.rs  structs.rs  tc_context.rs  traits.rs  typed_literal.rs
mirafmt/: Cargo.toml
mirafmt/src/: main.rs
programming_lang/: Cargo.toml
programming_lang/src/: annotations.rs  error.rs  globals.rs  lang_items.rs  lib.rs  module.rs  parser.rs  tokenizer.rs  tokens.rs
programming_lang/src/codegen/: context.rs  error.rs  mod.rs
programming_lang/src/old/: module.rs
programming_lang/src/old/typechecking/: module_resolution.rs  type_resolution.rs  typecheck.rs
programming_lang/src/parser/: expression.rs  module_resolution.rs  statement.rs  types.rs
programming_lang/src/snapshots/: programming_lang__tokenizer__test__numbers.snap
programming_lang/src/std_annotations/: mod.rs
programming_lang/src/typechecking/: error.rs  expression.rs  intrinsics.rs  ir_displayer.rs  mod.rs  module_resolution.rs  statement.rs  type_resolution.rs  typecheck.rs  typechecking.rs  types.rs
programming_lang/src/typechecking.bak/: mod.rs  type_resolution.rs
root/: index.html
src/: editor.rs  libfinder.rs  main.rs  repl.rs  run.rs
src/commands/: about.rs  compile.rs  expand.rs  mod.rs  repl.rs
std/: cstrlen.html  index.html  print_char.html  print_newline.html  print_str.html  print_str_newline.html  print_u64_hex.html
std/alloc/: Allocator.html  CAlloc.html  alloc.html  allocator.html  free.html  index.html  realloc.html
(+64 files in other folders)
