[package]
name = "mirac"
version = "0.2.1"
edition = "2021"

[workspace]
members = ["mira-common", "mira-driver", "mira-error-codes", "mira-errors", "mira-lexer", "mira-linking", "mira-llvm-backend", "mira-macros", "mira-parser", "mira-progress-bar", "mira-spans", "mira-target", "mira-typeck"]

[workspace.dependencies]
mira-typeck = { path = "./mira-typeck" }
mira-error-codes = { path = "./mira-error-codes" }
mira-driver = { path = "./mira-driver", default-features = false }
mira-target = { path = "./mira-target" }
mira-linking = { path = "./mira-linking" }
mira-parser = { path = "./mira-parser" }
mira-common = { path = "./mira-common" }
mira-errors = { path = "./mira-errors" }
mira-lexer = { path = "./mira-lexer" }
mira-macros = { path = "./mira-macros" }
mira-llvm-backend = { path = "./mira-llvm-backend" }
mira-progress-bar = { path = "./mira-progress-bar" }
mira-spans = { path = "./mira-spans" }
parking_lot = "0.12.3"
clap = { version = "4.5.28", features = ["derive"] }
inkwell = { git = "https://github.com/fishinghacks/inkwell.git" }
cfg-if = "1.0.0"
crossbeam-channel = "0.5.15"
syn = "2.0.104"
proc-macro2 = "1.0.95"
quote = "1.0.40"
termsize = "0.1.9"

[features]
default = ["llvm20-1"]
llvm20-1 = ["mira-driver/llvm20-1"]
llvm19-1 = ["mira-driver/llvm19-1"]
llvm18-0 = ["mira-driver/llvm18-0"]

[dependencies]
parking_lot.workspace = true
mira-typeck.workspace = true
mira-driver.workspace = true 
clap.workspace = true
mira-llvm-backend.workspace = true
mira-target.workspace = true

[profile.release]
strip = true
lto = "thin"
