[package]
name = "mirac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[workspace]
members = [ "mira-argparse","mira-common", "mira-context", "mira-doc", "mira-driver", "mira-error-codes", "mira-errors", "mira-lexer", "mira-linking", "mira-llvm-backend", "mira-macros", "mira-parser", "mira-progress-bar", "mira-spans", "mira-target", "mira-typeck"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
license-file = "LICENSE"

[workspace.dependencies]
mira-argparse = { path = "./mira-argparse" }
mira-typeck = { path = "./mira-typeck" }
mira-error-codes = { path = "./mira-error-codes" }
mira-driver = { path = "./mira-driver", default-features = false }
mira-target = { path = "./mira-target" }
mira-linking = { path = "./mira-linking" }
mira-parser = { path = "./mira-parser" }
mira-common = { path = "./mira-common" }
mira-errors = { path = "./mira-errors" }
mira-lexer = { path = "./mira-lexer" }
mira-macros = { path = "./mira-macros" }
mira-llvm-backend = { path = "./mira-llvm-backend" }
mira-progress-bar = { path = "./mira-progress-bar" }
mira-spans = { path = "./mira-spans" }
mira-context = { path = "./mira-context" }
parking_lot = "0.12.5"
clap = { version = "4.5.28", features = ["derive"] }
inkwell = { git = "https://github.com/fishinghacks/inkwell.git" }
cfg-if = "1.0.0"
crossbeam-channel = "0.5.15"
syn = "2.0.104"
proc-macro2 = "1.0.95"
quote = "1.0.40"
termsize = "0.1.9"
pulldown-cmark = "0.13"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
keyword_idents_2018 = "warn"
closure_returning_async_block = "warn"
deprecated_safe_2024 = "warn"
deref_into_dyn_supertrait = "warn"
rust_2021_incompatible_closure_captures = "warn"
edition_2024_expr_fragment_specifier = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
keyword_idents = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
linker_messages = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
single_use_lifetimes = "warn"
tail_expr_drop_order = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[features]
default = ["llvm20-1"]
llvm20-1 = ["mira-driver/llvm20-1"]
llvm19-1 = ["mira-driver/llvm19-1"]
llvm18-0 = ["mira-driver/llvm18-0"]

[dependencies]
mira-driver = { workspace = true, default-features = true }
mira-llvm-backend.workspace = true
mira-target.workspace = true
mira-argparse.workspace = true
mira-spans.workspace = true
mira-errors.workspace = true
mira-lexer.workspace = true
mira-parser.workspace = true

[lints]
workspace = true

[profile.release]
strip = true
lto = "thin"
