[package]
name = "mira-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
mira-progress-bar.workspace = true
mira-errors.workspace = true
mira-spans.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
