[package]
name = "mira-doc"
version = "0.1.0"
edition = "2024"

[dependencies]
mira-spans.workspace = true
mira-typeck.workspace = true
mira-errors.workspace = true
mira-common.workspace = true
mira-parser.workspace = true
mira-driver = { workspace = true, features = ["typeck"] }
pulldown-cmark.workspace = true
mira-context.workspace = true

[lints]
workspace = true
