[package]
name = "mira-doc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
mira-spans.workspace = true
mira-typeck.workspace = true
mira-errors.workspace = true
mira-common.workspace = true
mira-parser.workspace = true
mira-driver = { workspace = true, features = ["typeck"] }
pulldown-cmark.workspace = true
mira-context.workspace = true

[lints]
workspace = true
