[package]
name = "mira-driver"
version = "0.2.1"
edition = "2024"

[features]
default = ["llvm20-1"]
llvm20-1 = ["mira-llvm-backend", "mira-llvm-backend/llvm20-1"]
llvm19-1 = ["mira-llvm-backend", "mira-llvm-backend/llvm19-1"]
llvm18-0 = ["mira-llvm-backend", "mira-llvm-backend/llvm18-0"]

[dependencies]
mira-typeck.workspace = true
mira-errors.workspace = true
mira-progress-bar.workspace = true
mira-spans.workspace = true
mira-lexer.workspace = true
mira-parser.workspace = true
mira-target.workspace = true
mira-linking.workspace = true
mira-common.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
mira-llvm-backend = { workspace = true, optional = true }
