[package]
name = "mira-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[features]
default = ["llvm20-1", "linking"]
lexing = ["mira-lexer"]
macros = ["lexing", "mira-parser"]
parsing = ["macros"]
typeck = ["parsing", "mira-typeck"]
codegen = ["typeck", "mira-target"]
linking = ["codegen", "mira-linking"]
llvm20-1 = ["mira-llvm-backend", "codegen", "mira-llvm-backend/llvm20-1"]
llvm19-1 = ["mira-llvm-backend", "codegen", "mira-llvm-backend/llvm19-1"]
llvm18-0 = ["mira-llvm-backend", "codegen", "mira-llvm-backend/llvm18-0"]

[dependencies]
mira-typeck = { workspace = true, optional = true }
mira-lexer = { workspace = true, optional = true }
mira-parser = { workspace = true, optional = true }
mira-target = { workspace = true, optional = true }
mira-linking = { workspace = true, optional = true }
mira-llvm-backend = { workspace = true, optional = true }

mira-progress-bar.workspace = true
mira-common.workspace = true
parking_lot.workspace = true
mira-errors.workspace = true
mira-spans.workspace = true
mira-context.workspace = true

[lints]
workspace = true
