[package]
name = "mira-linking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
mira-target.workspace = true
mira-macros.workspace = true
mira-errors.workspace = true
mira-spans.workspace = true
mira-context.workspace = true

[lints]
workspace = true
