[package]
name = "mira-llvm-backend"
version = "0.2.1"
edition = "2024"

[features]
default = ["llvm20-1"]
llvm20-1 = ["inkwell/llvm20-1-prefer-static"]
llvm19-1 = ["inkwell/llvm19-1-prefer-static"]
llvm18-0 = ["inkwell/llvm18-0-prefer-static"]

[dependencies]
mira-typeck.workspace = true
mira-errors.workspace = true
mira-macros.workspace = true
mira-spans.workspace = true
mira-parser.workspace = true
mira-common.workspace = true
inkwell.workspace = true
mira-target.workspace = true
mira-context.workspace = true

[lints]
workspace = true
