[package]
name = "mira-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
mira-lexer.workspace = true
mira-spans.workspace = true
mira-common.workspace = true
mira-errors.workspace = true
mira-macros.workspace = true
parking_lot.workspace = true
mira-context.workspace = true

[lints]
workspace = true
