[package]
name = "mira-typeck"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot.workspace = true
mira-errors.workspace = true
mira-macros.workspace = true
mira-spans.workspace = true
mira-lexer.workspace = true
mira-parser.workspace = true
mira-common.workspace = true
mira-context.workspace = true
mira-progress-bar.workspace = true
