[package]
name = "mira-typeck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot.workspace = true
mira-errors.workspace = true
mira-macros.workspace = true
mira-spans.workspace = true
mira-lexer.workspace = true
mira-parser.workspace = true
mira-common.workspace = true
mira-context.workspace = true

[lints]
workspace = true
