[package]
name = "mira"
version = "0.1.0"
edition = "2021"

authors = ["Skylar (github.com/FishingHacks)", "Eden (Discord - @your.eden)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.3"
thiserror = "2.0.3"
inkwell = { version = "0.5.0", features = ["llvm17-0"] }
cfg-if = "1.0.0"
