[package]
name = "mira"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot.workspace = true
inkwell.workspace = true
cfg-if.workspace = true
mira-errors.workspace = true
mira-macros.workspace = true
mira-spans.workspace = true
mira-progress-bar.workspace = true
crossbeam-channel.workspace = true
mira-lexer.workspace = true
