[package]
name = "programming_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.3"
thiserror = "2.0.3"
inkwell = { version = "0.5.0", features = ["llvm17-0"] }

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
